Closed Bug 1803034 Opened 1 year ago Closed 1 year ago

Perma [tier 2] /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:599:12: error: use of undeclared identifier 'DXGI_COLOR_SPACE_RGB_STUDIO_G24_NONE_P2020'; did you mean 'DXGI_COLOR_SPACE_RGB_STUDIO_G22_NONE_P2020'?

Categories

(Firefox Build System :: General, defect, P5)

defect

Tracking

(firefox-esr102 unaffected, firefox107 unaffected, firefox108 unaffected, firefox109 fixed)

RESOLVED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- unaffected
firefox109 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bradwerth)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=397988378&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/GhDUghahTSq5Hs5bJRuFDg/runs/1/artifacts/public/logs/live_backing.log


[task 2022-11-29T03:10:33.748Z] 03:10:33  WARNING -  /builds/worker/checkouts/gecko/gfx/thebes/gfxDWriteFontList.h:458:16: warning: 'UsesSystemFallback' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
[task 2022-11-29T03:10:33.749Z] 03:10:33     INFO -    virtual bool UsesSystemFallback() { return true; }
[task 2022-11-29T03:10:33.749Z] 03:10:33     INFO -                 ^
[task 2022-11-29T03:10:33.749Z] 03:10:33     INFO -  /builds/worker/checkouts/gecko/gfx/thebes/gfxPlatformFontList.h:816:16: note: overridden virtual function is here
[task 2022-11-29T03:10:33.749Z] 03:10:33     INFO -    virtual bool UsesSystemFallback() { return false; }
[task 2022-11-29T03:10:33.749Z] 03:10:33     INFO -                 ^
[task 2022-11-29T03:10:33.750Z] 03:10:33     INFO -  In file included from /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:48:
[task 2022-11-29T03:10:33.750Z] 03:10:33  WARNING -  /builds/worker/checkouts/gecko/gfx/thebes/gfxDWriteFontList.h:487:42: warning: 'CreateFontInfoData' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
[task 2022-11-29T03:10:33.750Z] 03:10:33     INFO -    virtual already_AddRefed<FontInfoData> CreateFontInfoData();
[task 2022-11-29T03:10:33.750Z] 03:10:33     INFO -                                           ^
[task 2022-11-29T03:10:33.750Z] 03:10:33     INFO -  /builds/worker/checkouts/gecko/gfx/thebes/gfxFontInfoLoader.h:178:42: note: overridden virtual function is here
[task 2022-11-29T03:10:33.751Z] 03:10:33     INFO -    virtual already_AddRefed<FontInfoData> CreateFontInfoData() {
[task 2022-11-29T03:10:33.751Z] 03:10:33     INFO -                                           ^
[task 2022-11-29T03:10:33.751Z] 03:10:33    ERROR -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:599:12: error: use of undeclared identifier 'DXGI_COLOR_SPACE_RGB_STUDIO_G24_NONE_P2020'; did you mean 'DXGI_COLOR_SPACE_RGB_STUDIO_G22_NONE_P2020'?
[task 2022-11-29T03:10:33.751Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_RGB_STUDIO_G24_NONE_P2020:
[task 2022-11-29T03:10:33.751Z] 03:10:33     INFO -             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-11-29T03:10:33.752Z] 03:10:33     INFO -             DXGI_COLOR_SPACE_RGB_STUDIO_G22_NONE_P2020
[task 2022-11-29T03:10:33.752Z] 03:10:33     INFO -  /builds/worker/fetches/clang/bin/../x86_64-w64-mingw32/include/dxgicommon.h:39:5: note: 'DXGI_COLOR_SPACE_RGB_STUDIO_G22_NONE_P2020' declared here
[task 2022-11-29T03:10:33.752Z] 03:10:33     INFO -      DXGI_COLOR_SPACE_RGB_STUDIO_G22_NONE_P2020 = 0x3,
[task 2022-11-29T03:10:33.752Z] 03:10:33     INFO -      ^
[task 2022-11-29T03:10:33.753Z] 03:10:33    ERROR -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:600:12: error: use of undeclared identifier 'DXGI_COLOR_SPACE_YCBCR_STUDIO_G24_LEFT_P2020'; did you mean 'DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_LEFT_P2020'?
[task 2022-11-29T03:10:33.753Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_YCBCR_STUDIO_G24_LEFT_P2020:
[task 2022-11-29T03:10:33.753Z] 03:10:33     INFO -             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-11-29T03:10:33.753Z] 03:10:33     INFO -             DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_LEFT_P2020
[task 2022-11-29T03:10:33.753Z] 03:10:33     INFO -  /builds/worker/fetches/clang/bin/../x86_64-w64-mingw32/include/dxgicommon.h:46:5: note: 'DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_LEFT_P2020' declared here
[task 2022-11-29T03:10:33.754Z] 03:10:33     INFO -      DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_LEFT_P2020 = 0xa,
[task 2022-11-29T03:10:33.754Z] 03:10:33     INFO -      ^
[task 2022-11-29T03:10:33.754Z] 03:10:33    ERROR -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:601:12: error: use of undeclared identifier 'DXGI_COLOR_SPACE_YCBCR_STUDIO_G24_TOPLEFT_P2020'; did you mean 'DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_TOPLEFT_P2020'?
[task 2022-11-29T03:10:33.754Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_YCBCR_STUDIO_G24_TOPLEFT_P2020:
[task 2022-11-29T03:10:33.755Z] 03:10:33     INFO -             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-11-29T03:10:33.755Z] 03:10:33     INFO -             DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_TOPLEFT_P2020
[task 2022-11-29T03:10:33.755Z] 03:10:33     INFO -  /builds/worker/fetches/clang/bin/../x86_64-w64-mingw32/include/dxgicommon.h:51:5: note: 'DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_TOPLEFT_P2020' declared here
[task 2022-11-29T03:10:33.755Z] 03:10:33     INFO -      DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_TOPLEFT_P2020 = 0xf,
[task 2022-11-29T03:10:33.755Z] 03:10:33     INFO -      ^
[task 2022-11-29T03:10:33.756Z] 03:10:33    ERROR -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:599:12: error: duplicate case value 'DXGI_COLOR_SPACE_RGB_STUDIO_G22_NONE_P2020'
[task 2022-11-29T03:10:33.756Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_RGB_STUDIO_G24_NONE_P2020:
[task 2022-11-29T03:10:33.756Z] 03:10:33     INFO -             ^
[task 2022-11-29T03:10:33.756Z] 03:10:33     INFO -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:588:12: note: previous case defined here
[task 2022-11-29T03:10:33.756Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_RGB_STUDIO_G22_NONE_P2020:
[task 2022-11-29T03:10:33.756Z] 03:10:33     INFO -             ^
[task 2022-11-29T03:10:33.757Z] 03:10:33    ERROR -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:600:12: error: duplicate case value 'DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_LEFT_P2020'
[task 2022-11-29T03:10:33.757Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_YCBCR_STUDIO_G24_LEFT_P2020:
[task 2022-11-29T03:10:33.757Z] 03:10:33     INFO -             ^
[task 2022-11-29T03:10:33.757Z] 03:10:33     INFO -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:589:12: note: previous case defined here
[task 2022-11-29T03:10:33.757Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_LEFT_P2020:
[task 2022-11-29T03:10:33.758Z] 03:10:33     INFO -             ^
[task 2022-11-29T03:10:33.758Z] 03:10:33    ERROR -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:601:12: error: duplicate case value 'DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_TOPLEFT_P2020'
[task 2022-11-29T03:10:33.758Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_YCBCR_STUDIO_G24_TOPLEFT_P2020:
[task 2022-11-29T03:10:33.758Z] 03:10:33     INFO -             ^
[task 2022-11-29T03:10:33.758Z] 03:10:33     INFO -  /builds/worker/checkouts/gecko/gfx/thebes/gfxWindowsPlatform.cpp:594:12: note: previous case defined here
[task 2022-11-29T03:10:33.759Z] 03:10:33     INFO -        case DXGI_COLOR_SPACE_YCBCR_STUDIO_G22_TOPLEFT_P2020:
[task 2022-11-29T03:10:33.759Z] 03:10:33     INFO -             ^
[task 2022-11-29T03:10:33.759Z] 03:10:33     INFO -  7 warnings and 6 errors generated.
[task 2022-11-29T03:10:33.759Z] 03:10:33    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:667: gfxWindowsPlatform.o] Error 1
[task 2022-11-29T03:10:33.759Z] 03:10:33     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/thebes'
[task 2022-11-29T03:10:33.766Z] 03:10:33     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/mfbt/tests'

:bradwerth, since you are the author of the regressor, bug 1798067, could you take a look?

For more information, please visit auto_nag documentation.

Flags: needinfo?(bwerth)

I'll sort this out.

Assignee: nobody → bwerth
Flags: needinfo?(bwerth)

Set release status flags based on info from the regressing bug 1798067

Attachment #9305864 - Attachment description: WIP: Bug 1803034: Omit missing enums from an older dxgicommon.h for Windows MinGW builds. → Bug 1803034: Omit missing enums from an older dxgicommon.h for Windows MinGW builds.
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: