Bug 1803034: Omit missing enums from an older dxgicommon.h for Windows MinGW builds. r=gfx-reviewers,jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D163360